# multirotor_sim

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  multirotor_sim-config.cmake  package.xml
include/: mclogger.h  simulator.h
include/multirotor_sim/: controller.h  controller_base.h  controller_ros.h  datetime.h  dynamics.h  environment.h  ephemeris.h  estimator_base.h  estimator_wrapper.h  gnss.h  gtime.h  lqr.h  nlc.h  pid.h  raw_gnss.h  satellite.h  simulator.h  state.h  test_common.h  trajectory_base.h  utils.h  wsg84.h
params/: sim_params.yaml
python/: Dynamics_Propagate.py  ReferenceController_NonlinearController_Waypoints.py  rosbag_raw_gps_data.py
scripts/: plot_logs.py
src/: controller.cpp  controller_ros.cpp  datetime.cpp  dynamics.cpp  environment.cpp  ephemeris.cpp  gnss.cpp  gtime.cpp  satellite.cpp  simulator.cpp
src/test/: reference_algorithms.cpp  test_dynamics.cpp  test_ephemeris.cpp  test_gnss.cpp  test_gps.cpp  test_raw_gnss.cpp  test_raw_gps.cpp  test_reference_controller.cpp  test_satellite.cpp  test_state.cpp  test_time.cpp
